--- a/src/components/Container/Container.module.css
+++ b/src/components/Container/Container.module.css
@@ -4,7 +4,11 @@
     justify-content: center;
     padding: 30px;
     width: 500px;
-    background-color: slategrey;
+    background-color: aqua;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 50px;
+    border-radius: 20px;
    
     
 }
