--- a/src/components/Filter/Filter.module.css
+++ b/src/components/Filter/Filter.module.css
@@ -2,4 +2,10 @@
     display: flex;
     flex-direction: column;
     margin-top: 15px;
+    
+}
+.filter{
+    background-color: aquamarine;
+    padding: 10px;
+    border-radius: 5px;
 }
